--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Test #1</strong>, a PhD student at Purdue University<br />
-					responsive site template freebie<br />
+					<h1>I am <strong>Rick Hernandez</strong>,PhD student at Purdue University<br />
+					Msc. Animal welfare researcher <br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
