--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>I am <strong>Rick Hernandez</strong>,PhD student at Purdue University<br />
+					<h1><strong>Rick Hernandez</strong>,PhD student at Purdue University<br />
 					Msc. Animal welfare researcher <br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
 
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
+							<h2>"Texto de prueba inicial website researcher"<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
