--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Rick Hernandez Bio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Rick Hernandez</strong>,PhD student at Purdue University<br />
-					Msc. Animal welfare researcher <br />
-					<a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Rick O. Hernandez</strong>, PhD student<br />
+					MSc, Veterinarian<br />
+					<a href="https://scholar.google.com/citations?user=GdVBdHgAAAAJ&hl=es">Google Scholar</a>.</h1>
 				</div>
 			</header>
 
@@ -29,8 +29,8 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>"Texto de prueba inicial website researcher"<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>"Animal welfare for a new world"<br />
+							
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
