--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Rick O. Hernandez</strong>, PhD student<br />
+					<h1><strong>Rick Obrian Hernandez</strong>, PhD student<br />
 					MSc, Veterinarian<br />
 					<a href="https://scholar.google.com/citations?user=GdVBdHgAAAAJ&hl=es">Google Scholar</a>.</h1>
 				</div>
@@ -44,22 +44,22 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Indicators of sheep welfare</h3>
+								<h3>Indicators of sheep welfare in extensive farming</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Pig welfare on farm</h3>
+								<h3>Pig welfare on farm and quality certifications</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="https://www.frontiersin.org/files/Articles/790570/fvets-09-790570-HTML-r1/image_m/fvets-09-790570-g001.jpg" class="image fit thumb"><img src="https://www.frontiersin.org/files/Articles/790570/fvets-09-790570-HTML-r1/image_m/fvets-09-790570-g001.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
+								<h3>Pig animal welfare during transport</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
