--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Indicators of sheep welfare in extensive farming</h3>
+								<h3>Iceberg Indicators of sheep welfare in extensive farming</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Pig welfare on farm and quality certifications</h3>
+								<h3>On farm pig welfare realtionship with quality certifications</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="https://www.frontiersin.org/files/Articles/790570/fvets-09-790570-HTML-r1/image_m/fvets-09-790570-g001.jpg" class="image fit thumb"><img src="https://www.frontiersin.org/files/Articles/790570/fvets-09-790570-HTML-r1/image_m/fvets-09-790570-g001.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
+								<h3>Pig animal welfare during transportation</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -109,7 +109,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">herna671@purdue.edu</a>
 									</li>
 								</ul>
 							</div>
