--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</header>
 						<p>Climate change is creating new challenges for animals... heat stress resiliance selection with genetic programs.... new animal welfare indicators</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -445,7 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Rick Obrian Hernandez</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
