--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>"A new Animal welfare research approach for a changing world"<br />
+							<h2>"Animal Welfare synergy for a changing world"<br />
 							
 						</header>
-						<p>Climate change is creating new challenges for animals... heat stress resiliance selection with genetic programs.... new animal welfare indicators</p>
+						<p>Climate change is creating new challenges for livestock animals. Therefore, heat stress resiliance selection with genetic programs
+							as well as refined animal welfare indicators can help us to increase animal welfare without affecting 
+							production. But that would not be possible without the networking among the 
+						consumers, industry and smallholders</p>
 						<ul class="actions">
 							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button">Learn More</a></li>
 						</ul>
@@ -81,7 +84,8 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>If you want more information about how to implement animal welfare in your farm or business please
+						</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
