--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>If you want more information about how to implement animal welfare in your farm or business please
+						<h2>Contact me</h2>
+						<p>for more information
 						</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
@@ -104,8 +104,8 @@
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										Purdue University <br />
-										Indiana <br />
-										United States
+										Creighton Hall of Animal Sciences<br />
+										IN, USA
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
