--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 				<section>
 					<h4>Published work</h4>
-					<h5>Journal Articles</h5>
+					<h5>Latest Journal Articles</h5>
 					<div class="table-wrapper">
 						<table>
 							<thead>
