--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
