--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Animal Welfare synergy for a changing world<br />
+							<h2>Animal Welfare strategies for a changing world<br />
 							
 						</header>
-						<p>Climate change is creating new challenges for livestock animals. Therefore, heat stress resiliance selection with genetic programs
-							as well as refined animal welfare indicators can help us to increase animal welfare without affecting 
-							production. But that would not be possible without the networking among the 
-						consumers, industry and smallholders</p>
+						<p>Climate change is presenting new challenges for livestock animals. My research aims to find novel phenotypic traits
+							to include in genetic selection programs for heat stress resiliance, also 
+						   to identify new or refined animal welfare indicators that can help us to increase animal welfare without affecting 
+						   production and lastly extending this strategies to smallholders and farmers around the world. </p>
 						
 					</section>
 
