--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<tbody>
 								<tr>
 									<td>2022</td>
-									<td>Strategies for the implementation of good sheep farming practices as a source of innovation in traditional extensive rural systems</td>
+									<td>Strategies for implementation of good sheep farming practices as a source of innovation in traditional extensive rural systems</td>
 									<td>Book Chapter</td>
 								</tr>
 								<tr>
