--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 						<h2>Current Work</h2>
 						<div>
 							<ul>
-								<li> Genetic selection for heat stress resilliance in piglets</li>
-								<li> Effects of microclimate during transportation on pig animal welfare </li>
+								<li> Genetic selection for improved animal welfare in livestock</li>
+								<li> Identification of novel indicators of animal welfare </li>
 								<li> Genetic selection for leg health and welfare in turkeys</li>
 							</ul>
 						</div>
@@ -75,7 +75,7 @@
 							-->
 						</div>
 						<ul class="actions">
-							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button">Full Portfolio</a></li>
+							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button" target="_blank">Full Portfolio</a></li>
 						</ul>
 					</section>
 
@@ -96,7 +96,7 @@
 							<tbody>
 								<tr>
 									<td>2020</td>
-									<td><a href="https://www.mdpi.com/2076-2615/10/12/2273"> indicators for animal welfare in rural sheep farms using the five domains model approach</a></td>
+									<td><a href="https://www.mdpi.com/2076-2615/10/12/2273" target="_blank"> Indicators for animal welfare in rural sheep farms using the five domains model approach</a></td>
 									<td>Animals</td>
 								</tr>
 								<tr>
