--- a/index.html
+++ b/index.html
@@ -101,24 +101,24 @@
 								</tr>
 								<tr>
 									<td>2022</td>
-									<td>Field trial of factors associated with the presence of dead and non-ambulatory pigs during transport across three colombian slaughterhouses</td>
+									<td><a href="https://doi.org/10.3389/fvets.2022.790570" target="_blank"></a>Field trial of factors associated with the presence of dead and non-ambulatory pigs during transport across three colombian slaughterhouses</a></td>
 									<td>Frontiers in Veterinary Science</td>
 								</tr>
 								<tr>
 									<td>2022</td>
-									<td>Factors influencing Good Farming Practices implementation among sheep
-										smallholders in the Colombian post-conflict scenario
+									<td><a href="http://dx.doi.org/10.15381/rivep.v33i6.22778" target="_blank"></a>Factors influencing Good Farming Practices implementation among sheep
+										smallholders in the Colombian post-conflict scenario</a>
 										</td>
 									<td>Rev. de Inv. Veterinarias del Perú</td>
 								</tr>
 								<tr>
 									<td>2022</td>
-									<td>Assessment of animal welfare in fattening pig farms certified in good livestock practices</td>
+									<td><a href="https://doi.org/10.1080/10888705.2021.2021532" target="_blank"></a>Assessment of animal welfare in fattening pig farms certified in good livestock practices</a></td>
 									<td>Journal of Appllied Animal Welfare Science</td>
 								</tr>
 								<tr>
 									<td>2023</td>
-									<td>Assessment of slaughterhouse-based measures as animal welfare indicators in fattening pigs</td>
+									<td><a href="https://doi.org/10.3389/fanim.2023.1064933" target="_blank"></a>Assessment of slaughterhouse-based measures as animal welfare indicators in fattening pigs</a></td>
 									<td>Frontiers in Animal Science</td>
 								</tr>
 							</tbody>
