--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 							<h2>Animal Welfare strategies for a changing world<br />
 							
 						</header>
-						<p>Climate change is presenting new challenges for livestock animals. My research aims to find novel phenotypic traits
-							to include in genetic selection programs for heat stress resiliance, also 
-						   to identify new or refined animal welfare indicators that can help us to increase animal welfare without affecting 
-						   production and lastly extending this strategies to smallholders and farmers around the world. </p>
+						<p>My research aims to find novel traits to include in genetic selection programs to increase animal welfare in livestock, also 
+						   to identify or refined new animal welfare indicators that can be included in selection indexes for genetic improvement 
+						   and lastly, doing extension to smallholders and farmers to improve animal welfare. </p>
 						
 					</section>
 
