--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							-->
 						</div>
 						<ul class="actions">
-							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button" target="_blank">Full Portfolio</a></li>
+							<li><a href="https://www.researchgate.net/profile/Rick-Hernandez-3" class="button" target="_blank">C.V</a></li>
 						</ul>
 					</section>
 
