--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 						<h2>Current Work</h2>
 						<div>
 							<ul>
-								<li> Genetic selection for improved animal welfare in livestock</li>
-								<li> Identification of novel indicators of animal welfare </li>
+								<li> Genetic selection for improved animal welfare in livestock animals</li>
+								<li> Identification of novel indicators for animal welfare </li>
 								<li> Genetic selection for leg health and welfare in turkeys</li>
 							</ul>
 						</div>
